# apppass

./: .gitignore  DETAILED_GUIDE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_STEPS.md  README.md
.github/workflows/: features-test.yml  main.yml
apppass/: .gitignore  Cargo.toml  README.md
apppass/.github/workflows/: main.yml
apppass/packaging/homebrew/: apppass.rb
apppass/src/: functionalities.rs  main.rs
apppass/src/app/: keyring.rs  lock.rs  mod.rs  otp.rs  password.rs
apppass/src/ui/: app.rs  event.rs  mod.rs  ui_render.rs
apppass/tests/: integration_tests.rs
packaging/chocolatey/apppass/: apppass.nuspec
packaging/chocolatey/apppass/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/homebrew/: apppass.rb
packaging/scoop/: apppass.json
packaging/winget/: apppass.yaml
passwgen/: Cargo.toml
passwgen/src/: functionalities.rs  main.rs
src/: main.rs
src/app/: keyring.rs  lock.rs  mod.rs  password.rs
src/ui/: app.rs  event.rs  mod.rs  ui_render.rs
tests/: integration_tests.rs
