[package]
name = "apppass"
version = "0.2.0"
edition = "2021"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Generate secure passwords for your applications."
homepage = "https://github.com/stescobedo92/apppass"
repository = "https://github.com/stescobedo92/apppass"
keywords = ["cli"]
readme = "README.md"
categories = ["command-line-utilities"]

[features]
default = ["console", "tui"]
console = ["clap"]
tui = ["ratatui", "crossterm"]

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.26", optional = true }
once_cell = "1.8"
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
mockall = "0.13.1"
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }

[dev-dependencies]
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
