[package]
name = "passgen"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Generate secure passwords for your applications."
homepage = "https://github.com/stescobedo92/passgen"
repository = "https://github.com/stescobedo92/passgen"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "2.33.3"
once_cell = "1.8"
